Made Unscrollable flex to fix OverflowDetector on Safari.

--- a/modules/gui/frontend/src/widget/scrollable.module.css
+++ b/modules/gui/frontend/src/widget/scrollable.module.css
@@ -1,4 +1,6 @@
 .unscrollable {
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
 }
 
